--- a/APIPediTiscos/appsettings.json
+++ b/APIPediTiscos/appsettings.json
@@ -1,4 +1,12 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=FrutariaPWeb;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "JWT": {
+    "Key": "ZdYM000OLlMQG6VVVp1OH7RxtuEfGvBnXarp7gHuw1qvUC5dcGt3SNM",
+    "Issuer": "https://localhost:7066/",
+    "Audience": "https://localhost:7066/"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
